# drss2023-signal-oc

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  docker-compose.yml  startInterlocking.sh  startOC.sh
config/: pin_config.toml  pin_config_tud.toml  rasta_interlocking.cfg  rasta_oc.cfg
src/: grpc_main.rs  grpc_sender.rs  io_config.rs  main.rs  oc_interface.rs  old_main.rs  old_sender.rs  sender.rs
