[package]
name = "drss2023-signal-object-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/main.rs"

[[bin]]
name = "grpc_sender"
path = "src/grpc_sender.rs"

[[bin]]
name = "grpc_main"
path = "src/grpc_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-core = "0.3"
picontrol = { git = "https://github.com/ctiedt/revpi-tools-rs.git", version = "0.1.0" }
futures-util = "0.3"
async-stream = "0.2"
md5 = "0.7.0"

[dependencies.sci-rs]
git = "https://github.com/mese96/rasta-rs"
features = ["rasta"]

[dependencies.rasta-rs]
git = "https://github.com/mese96/rasta-rs"

[build-dependencies]
tonic-build = "0.9"